--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-GlobalDefaultGameMode="/Script/WizardsAndDragons.WizardsAndDragonsGameMode"
+GameDefaultMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
+EditorStartupMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
+GlobalDefaultGameMode=/Game/Blueprints/BP_WADGameMode.BP_WADGameMode_C
+GameInstanceClass=/Game/Blueprints/BP_WADGameInstance.BP_WADGameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
@@ -17,5 +18,3 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
-
