No longer so borked

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
-EditorStartupMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
+GameDefaultMap=/Game/Maps/AWholeNewWorld.AWholeNewWorld
+EditorStartupMap=/Game/Maps/AWholeNewWorld.AWholeNewWorld
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
-GameInstanceClass=/Script/WizardsAndDragons.WADGameInstance
+GameInstanceClass=/Game/Blueprints/GameInstance/BP_GameInstance.BP_GameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
