Fixed merge issues
Should work as intended now

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
-EditorStartupMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
-GlobalDefaultGameMode=/Game/Blueprints/BP_WADGameMode.BP_WADGameMode_C
-GameInstanceClass=/Game/Blueprints/BP_WADGameInstance.BP_WADGameInstance_C
+GameDefaultMap=/Game/Maps/AWholeNewWorld.AWholeNewWorld
+EditorStartupMap=/Game/Maps/AWholeNewWorld.AWholeNewWorld
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GameInstanceClass=/Game/Blueprints/GameInstance/BP_GameInstance.BP_GameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
