--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/AWholeNewWorld.AWholeNewWorld
-EditorStartupMap=/Game/Maps/AWholeNewWorld.AWholeNewWorld
+EditorStartupMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GameInstanceClass=/Game/Blueprints/GameInstance/BP_GameInstance.BP_GameInstance_C
 
@@ -18,3 +18,15 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=NavigationOnly
+HardwareCursors=()
+SoftwareCursors=()
+ApplicationScale=1.000000
+UIScaleRule=ShortestSide
+CustomScalingRuleClass=None
+UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000,PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant),ExternalCurve=None)
+bAllowHighDPIInGameMode=False
+bLoadWidgetsOnDedicatedServer=True
+
